[package]
name = "tree-sitter-lume"
description = "Syntax highlighting for Lume"
version = "0.1.3"
authors = ["Max T. Kristiansen <me@maxtrier.dk> <me@maxtrier.dk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lume"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lume-lang/tree-sitter-lume"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
